objects/copado__MC_Notification__mdt.object
<CustomObject>
    <description>This is the notification to be sent from Copado.</description>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, notification is avaiable for use</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <description>Description of the Notification</description>
        <inlineHelpText>Description of the Notification</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Subject__c</fullName>
        <description>Subject of the notiication</description>
        <inlineHelpText>Subject of the notiication</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Template__c</fullName>
        <description>This is the body template of the notification</description>
        <inlineHelpText>This is the body template of the notification</inlineHelpText>
        <label>Template</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>MC Notification</label>
    <pluralLabel>MC Notifications</pluralLabel>
</CustomObject>